cmake_minimum_required(VERSION 2.6)
 
PROJECT(Test)

 
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(NUKLEI nuklei)
INCLUDE_DIRECTORIES(${NUKLEI_INCLUDE_DIR})
LINK_DIRECTORIES(${NUKLEI_LIBRARY_DIR} /usr/local/lib)

ADD_DEFINITIONS(${NUKLEI_CFLAGS})

STRING(REGEX REPLACE  "-I([^ ]+)" "\\1" CPPFLAGS "$ENV{CPPFLAGS}")
SEPARATE_ARGUMENTS(CPPFLAGS)
INCLUDE_DIRECTORIES(${CPPFLAGS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")


ADD_EXECUTABLE(Test Test.cpp Ply.cpp )

TARGET_LINK_LIBRARIES(Test vtkHybrid nuklei pcl_io pcl_filters pcl_segmentation pcl_features pcl_kdtree pcl_common)
